add passing test

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Simple 2 number web calculator for git demos",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "lint": "eslint"
   },
   "repository": {
@@ -18,7 +18,9 @@
     "url": "https://github.com/nReality/calc3/issues"
   },
   "homepage": "https://github.com/nReality/calc3#readme",
-  "dependencies": {},
+  "dependencies": {
+    "jest": "^26.6.3"
+  },
   "devDependencies": {
     "eslint": "^7.26.0",
     "eslint-config-airbnb-base": "^14.2.1",
