--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -8,6 +8,6 @@ jobs:
     - name: Install modules
       run: npm install
     - name: Run Linter
-      run: npm test
+      run: npm run lint
     - name: Run Test
       run: npm test
