--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -11,3 +11,5 @@ jobs:
     - uses: actions/checkout@v2
     - name: Install modules
       run: npm install
+    - name: Run ESLint
+      run: npm run eslint
