--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -13,3 +13,5 @@ jobs:
       run: npm install
     - name: Run ESLint
       run: npm run eslint
+    - name: Run Unit Tests...
+      run: npm run test
