build: move deploy to main build script

--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -15,3 +15,9 @@ jobs:
       run: npm run eslint
     - name: Run Unit Tests...
       run: npm run test
+    - uses: Deploy Staging FirebaseExtended/action-hosting-deploy@v0
+        with:
+          repoToken: '${{ secrets.GITHUB_TOKEN }}'
+          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_AGILE_AFRICA_FA653 }}'
+          channelId: live
+          projectId: agile-africa-fa653      
