--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -15,9 +15,9 @@ jobs:
       run: npm run eslint
     - name: Run Unit Tests...
       run: npm run test
-    - uses: Deploy Staging FirebaseExtended/action-hosting-deploy@v0
+      - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_AGILE_AFRICA_FA653 }}'
           channelId: live
-          projectId: agile-africa-fa653      
+          projectId: agile-africa-fa653
