--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -11,4 +11,9 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - run: npm install
-
+      - uses: FirebaseExtended/action-hosting-deploy@v0
+        with:
+          repoToken: '${{ secrets.GITHUB_TOKEN }}'
+          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_AGILE_AFRICA_FA653 }}'
+          channelId: live
+          projectId: agile-africa-fa653
