--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -7,15 +7,18 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v2
+    # steps:
+    # - uses: actions/checkout@v2
     # - name: Install modules
-    - run: npm install
+    # - run: npm install
     # - name: Run ESLint
     #   run: npm run eslint
     # - name: Run Unit Tests...
     #   run: npm run test
-    - uses: FirebaseExtended/action-hosting-deploy@v0
+    steps:
+      - uses: actions/checkout@v2
+      - run: npm install
+      - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_AGILE_AFRICA_FA653 }}'
