--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -18,6 +18,8 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - run: npm install
+      - run: npm run eslint
+      - run: npm run test
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
