--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jest": "^26.6.3"
   },
   "devDependencies": {
+    "cypress": "^7.3.0",
     "eslint": "^7.26.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.22.1"
